<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>eu.clarin.cmdi</groupId>
      <artifactId>curation-dashboard</artifactId>
      <version>${revision}</version>
   </parent>
   <groupId>eu.clarin.cmdi.curation</groupId>
   <artifactId>curation-web</artifactId>
   <name>curation-web</name>
   <description>curation web application</description>
   <properties>
      <commonmark.version>0.24.0</commonmark.version>
   </properties>
   <dependencies>
      <dependency>
         <groupId>org.commonmark</groupId>
         <artifactId>commonmark-ext-gfm-tables</artifactId>
         <version>${commonmark.version}</version>
      </dependency>
      <dependency>
         <groupId>eu.clarin.cmdi</groupId>
         <artifactId>curation-api</artifactId>
         <version>${project.version}</version>
         <exclusions>
         	<exclusion>
         		<groupId>commons-logging</groupId>
         		<artifactId>commons-logging</artifactId>
         	</exclusion>
         </exclusions>
      </dependency>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-thymeleaf</artifactId>
      </dependency>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
      </dependency>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-configuration-processor</artifactId>
         <optional>true</optional>
      </dependency>
      <dependency>
         <groupId>org.mariadb.jdbc</groupId>
         <artifactId>mariadb-java-client</artifactId>
         <scope>runtime</scope>
      </dependency>
      <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.sf.saxon</groupId>
         <artifactId>Saxon-HE</artifactId>
      </dependency>
      <dependency>
      	<groupId>com.fasterxml.jackson.dataformat</groupId>
      	<artifactId>jackson-dataformat-xml</artifactId>
      </dependency>
      <dependency>
      	<groupId>com.fasterxml.jackson.dataformat</groupId>
      	<artifactId>jackson-dataformat-csv</artifactId>
      </dependency>
      <dependency>
      	<groupId>com.fasterxml.jackson.datatype</groupId>
      	<artifactId>jackson-datatype-jsr310</artifactId>
      </dependency>
   </dependencies>
   <build>
      <plugins>
         <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
               <excludes>
                  <exclude>
                     <groupId>org.projectlombok</groupId>
                     <artifactId>lombok</artifactId>
                  </exclude>
               </excludes>
            </configuration>
         </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <configuration>
                  <source>21</source>
                  <target>21</target>
                  <compilerArgs>--enable-preview</compilerArgs>
              </configuration>
          </plugin>
      </plugins>
   </build>
</project>